--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -25,16 +25,19 @@
       <!-- ============================================================== -->
 
       <router-outlet></router-outlet>
-      
+
+      <!-- 
       <div class="row">
-          <div class="col-12">
-              <div class="card">
-                  <div class="card-body">
-                      This is some text within a card block.
-                  </div>
-              </div>
+        <div class="col-12">
+          <div class="card">
+            <div class="card-body">
+              This is name text
+            </div>
           </div>
-      </div>
+        </div>
+      </div> 
+      -->
+      
       <!-- ============================================================== -->
       <!-- End PAge Content -->
       <!-- ============================================================== -->
